--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   position: absolute;
                   width: 100%;
                   height: 100%;
-                  top: 0;
+                  top: -300px;
                   left: 0;
             }
 
@@ -353,7 +353,7 @@
                         height: 1500px;
                         transform: translateX(-50%);
                         left: 30%;
-                        bottom: 68%;
+                        bottom: 38%;
                         right: initial;
                         top: initial;
                         transition: 2s ease-in-out;
@@ -439,7 +439,7 @@
                                     </div>
                                     <div class="input-field">
                                           <i class="fas fa-user"></i>
-                                          <input id="phan_tram" type="text" placeholder="Phần trăm giảm" />
+                                          <input id="phan_tram" type="number" placeholder="Phần trăm giảm" />
                                     </div>
                                     <input onclick="tinhTien()" type="submit" value="Login" class="btn solid" />
 
